--- a/extensions/checkout-ui/locales/en.default.json
+++ b/extensions/checkout-ui/locales/en.default.json
@@ -1,5 +1,6 @@
 {
   "welcome": "Welcome to the {{target}} extension!",
   "label": "National Identification Document / Id Card",
-  "error": "National Identification Document / Id Card is Required"
+  "error": "National Identification Document / Id Card is Required",
+  "accessory": "The ID card is used to identify the user."
 }
