--- a/extensions/checkout-ui/locales/es.json
+++ b/extensions/checkout-ui/locales/es.json
@@ -1,5 +1,6 @@
 {
   "welcome": "Welcome to the {{target}} extension!",
   "label": "Documento nacional de identidad",
-  "error": "Documento nacional de identidad (requerido)"
+  "error": "Documento nacional de identidad (requerido)",
+  "accessory": "La tarjeta de identificación se utiliza para identificar al usuario."
 }
