--- a/extensions/checkout-ui/locales/en.default.json
+++ b/extensions/checkout-ui/locales/en.default.json
@@ -1,6 +1,6 @@
 {
   "welcome": "Welcome to the {{target}} extension!",
-  "label": "National Identification Document / Id Card",
-  "error": "National Identification Document / Id Card is Required",
-  "accessory": "The ID card is used to identify the user."
+  "label": "National Identity Card",
+  "error": "This field is mandatory for customs",
+  "accessory": "We request this information as the shipment will pass through customs"
 }
